# rbe500-group-project

./: .gitignore  Project_Part1_full.m  README.md  part3_math.m  rbe500-gazebo.md
part1/: Project_Part1_fk.m  Project_Part1_full.m  part1-report.tex
part2/: part2-report.tex  plotting.py
part3/: part3-report.tex
ros2-code/: .gitignore  apply-scara-efforts.sh  move-scara.sh  reset-scara-position.sh  velocity-move-scara.sh
ros2-code/src/group_project/: package.xml  setup.py
ros2-code/src/group_project/group_project/: calc_kinematics.py  inverse_kin_service.py
ros2-code/src/inv_kin_serv/: package.xml  setup.cfg  setup.py
ros2-code/src/inv_kin_serv/inv_kin_serv/: inverse_kin_service.py
ros2-code/src/rbe500-custom-interfaces/: CMakeLists.txt  package.xml
ros2-code/src/rbe500-custom-interfaces/srv/: InvKinSCARA.srv
ros2-code/src/rbe500_custom_interfaces/: CMakeLists.txt  package.xml
ros2-code/src/rbe500_custom_interfaces/srv/: CalcScaraEndEffVelRef.srv  CalcScaraJointVelRefs.srv  InvKinSCARA.srv  ScaraEndEffVelRef.srv  ScaraRefPos.srv
ros2-code/src/scara_pd_controller/: package.xml  setup.cfg  setup.py
ros2-code/src/scara_pd_controller/scara_pd_controller/: scara_pd_controller.py
ros2-code/src/velocity_controller/: package.xml  setup.py
ros2-code/src/velocity_controller/velocity_controller/: scara_velocity_controller.py
ros2-code/src/velocity_kin/: package.xml  setup.cfg  setup.py
ros2-code/src/velocity_kin/velocity_kin/: velocity_kinematics.py
ros2-code/src/velocity_kinematics/: package.xml  setup.py
(+5 files in other folders)
