<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>inv_kin_serv</name>
  <version>0.0.0</version>
  <description>Inverse Kinematics ROS portion for Group Assignment 1</description>
  <maintainer email="agupta11@wpi.edu">Arjan Gupta</maintainer>
  <license>Property of WPI</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rbe500_custom_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
